# NBIM-case-project

./: README.md  architecture.md  main.py  pyproject.toml  streamlit_app.py
src/: __init__.py  data_loader.py  reconciliation_crew.py
src/crews/: crew.py
src/crews/config/: agents.yaml  tasks.yaml
src/tools/: break_analyzer.py  simple_csv_tool.py  simple_raw_csv_tool.py  tool_config.py
