[project]
name = "nbim-dividend-reconciliation"
version = "0.1.0"
description = "LLM-powered dividend reconciliation system using CrewAI"
requires-python = ">=3.11"

dependencies = [
    "crewai[tools]>=0.28.8",
    "anthropic>=0.18.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "streamlit>=1.29.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
]